# e-patra

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  build.sh  clean.bat  clean.sh  e_dastavej_schema.sql  pom.xml  schema.sql  webpack.config.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  USER_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
packaging-builder/: build.bat  build.js  build.sh  clean.bat  clean.js  clean.sh  setup-cert.ps1
sql/: schema.sql
src/main/frontend/: index.js
src/main/java/com/updevlogics/config/: WebSocketConfig.java
src/main/java/com/updevlogics/controller/: BackupController.java  FileController.java
src/main/java/com/updevlogics/model/: BackupRecord.java  FileMetadata.java  FileMetadataRepository.java
src/main/java/com/updevlogics/repository/: BackupRepository.java
src/main/java/com/updevlogics/service/: BackupProgressHandler.java  BackupService.java  FileService.java
src/main/java/in/updev/: EDastavejApplication.java
src/main/java/in/updev/config/: LoggingConfig.java  RequestLoggingInterceptor.java  SecurityConfig.java  (+2 more)
src/main/resources/: application.properties  application.yml
src/main/resources/templates/: admin_dashboard.html  admin_login.html  assign_roles.html  categories.html  category_form.html  file_details.html  file_upload.html  index.html  layout.html  role_form.html  roles.html  search.html  subcategories.html  subcategory_form.html  user_dashboard.html  user_form.html  user_login.html  users.html
(+36 files in other folders)
